# bluez-agent-qt

./: CMakeLists.txt  LICENSE  README.md  adaptor.cpp  adaptor.h  btmacaddressagent.cpp  btmacaddressagent.h  generateAdaptor.sh  main.cpp  org.bluez.Agent1.xml  pairingagentwithvalidation.h
